Made content user editable

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "moon flower";
-    src: url("moon flower.ttf");
+    src: url("fonts/moon flower.ttf");
 }
 body {
     margin: 0;
